--- a/contact.html
+++ b/contact.html
@@ -5,30 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assests/style.css" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
-
-    <header>
-        <nav class="flex-container">
-            <section id="name">
-                <h1>Brian Bat</h1>
-            </section>
-            <section id="empty-space"> </section>
-            <section id="links">
-                <a href="index.html" id="link">About</a>
-                <a href="portfolio.html" id="link">Portfolio</a>
-                <a href="contact.html" id="link">Contact</a>
-            </section>
-        </nav>
+    <header class="flex-container">
+        <section class="my-name">
+            <h1>Brian Bat</h1>
+        </section>
+        <section class="empty-space"></section>
+        <section class="links">
+            <a href="index.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact</a>
+        </section>
     </header>
 
     <section class="wrapper">
-        <section id="contact">
-            <h1 id="contact-title">Contact</h1>
+        <section class="content">
+            <section class="title">
+                <h1 id="about-me">Contact</h1>
+            </section>
             <hr>
             <form>
                 Name <br>
@@ -40,7 +38,8 @@
         </section>
     </section>
     <footer>
-        <section class="footer-section"></section>
+        <section class="footer-top"></section>
+        <section class="footer-text">c Copyright</section>
     </footer>
 </body>
 
