--- a/index.html
+++ b/index.html
@@ -5,48 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assests/style.css" />
+    <title>Responsive Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
-
-    <header>
-        <nav class="flex-container">
-            <section id="name">
-                <h1>Brian Bat</h1>
-            </section>
-            <section id="empty-space"> </section>
-            <section id="links">
-                <a href="index.html" id="link">About</a>
-                <a href="portfolio.html" id="link">Portfolio</a>
-                <a href="contact.html" id="link">Contact</a>
-            </section>
-        </nav>
+    <header class="flex-container">
+        <section class="my-name">
+            <h1>Brian Bat</h1>
+        </section>
+        <section class="empty-space"></section>
+        <section class="links">
+            <a href="index.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact</a>
+        </section>
     </header>
 
     <section class="wrapper">
-
-        <section id="index-full">
-            <section class="about-me">
-                <h1>About Me</h1>
+        <section class="content">
+            <section class="title">
+                <h1 id="about-me">About Me</h1>
             </section>
             <hr>
-            <section id="image-section" class="flex-container">
-                <img src="./assests/pictures/portrait-1.jpg" alt="my image">
-                <p id="first-paragraph">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                    'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still
-                    in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+            <section class="flex-container">
+                <img src="https://media.licdn.com/dms/image/C5603AQHIQRksR8EQAA/profile-displayphoto-shrink_200_200/0?e=1563408000&v=beta&t=KbwJbl-jrUWPUHf-cVGFA0VCrj6qXtb1CuZJ6Ri8mcA" alt="my-image">
+                <p class="text-1">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web;
+                    on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum. </p>
             </section>
-            <p id="second-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the
-                Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected
-                humour, or non-characteristic words etc.</p>
+            <p class="text-2">The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very
+                useful when the focus is meant to be on design, not content.</p>
         </section>
     </section>
     <footer>
-        <section class="footer-section"></section>
+        <section class="footer-top"></section>
+        <section class="footer-text">c Copyright</section>
     </footer>
 </body>
 
