--- a/portfolio.html
+++ b/portfolio.html
@@ -5,57 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home Page</title>
-    <link rel="stylesheet" type="text/css" href="assests/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
-
-    <header>
-        <nav class="flex-container">
-            <section id="name">
-                <h1>Brian Bat</h1>
-            </section>
-            <section id="empty-space"> </section>
-            <section id="links">
-                <a href="index.html" id="link">About</a>
-                <a href="portfolio.html" id="link">Portfolio</a>
-                <a href="contact.html" id="link">Contact</a>
-            </section>
-        </nav>
+    <header class="flex-container">
+        <section class="my-name">
+            <h1>Brian Bat</h1>
+        </section>
+        <section class="empty-space"></section>
+        <section class="links">
+            <a href="index.html" id="about">About</a>
+            <a href="portfolio.html" id="portfolio">Portfolio</a>
+            <a href="contact.html" id="contact">Contact</a>
+        </section>
     </header>
 
     <section class="wrapper">
-        <section id="portfolio">
-            <h1 id="portfolio-title">Portfolio</h1>
+        <section class="content">
+            <section class="title">
+                <h1 id="about-me">Portfolio</h1>
+            </section>
             <hr>
-            <section id="row1" class="flex-container">
-                <section id="row1-1" class="picture">
-                    <section class="game-name">Hangman</section>
+            <section class="flex-container">
+                <section class="row1-1">
+                    <section class="game-name">Word Guess</section>
                 </section>
-                <section id="row1-2" class="picture">
+                <section class="row1-2">
                     <section class="game-name">RPG Game</section>
                 </section>
             </section>
-            <section id="row2" class="flex-container">
-                <section id="row2-1" class="picture">
+            <section class="flex-container">
+                <section class="row2-1">
                     <section class="game-name">Trivia Game</section>
                 </section>
-                <section id="row2-2" class="picture">
-                    <section class="game-name">Rutgers Info Widget</section>
+                <section class="row2-2">
+                    <section class="game-name">Info Widget</section>
                 </section>
             </section>
-            <section id="row3" class="flex-container">
-                <section id="row3-1" class="picture">
+            <section class="flex-container">
+                <section class="row3-1">
                     <section class="game-name">Rock Paper Scissors</section>
                 </section>
-                <section id="row3-2"></section>
+                <section class="row3-2">
+                </section>
             </section>
+
         </section>
     </section>
     <footer>
-        <section class="footer-section"></section>
+        <section class="footer-top"></section>
+        <section class="footer-text">c Copyright</section>
     </footer>
 </body>
 
